feat: add minimal single-device backend (#39)
